--- a/app/src/main/res/menu/side_navigation.xml
+++ b/app/src/main/res/menu/side_navigation.xml
@@ -6,7 +6,7 @@
     <group
         android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_roller"
             android:icon="@drawable/baseline_home_24"
             android:title="Dice Roller"
         />
