--- a/app/src/main/res/layout/activity_new_character.xml
+++ b/app/src/main/res/layout/activity_new_character.xml
@@ -15,7 +15,7 @@
         android:layout_centerInParent="true"/>
 
     <Button
-        android:id="@+id/back"
+        android:id="@+id/returnHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Home" />
