updated UI for the Dice Roller

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#86ced5</color>
+    <color name="pink">#ffb9cc</color>
 
 </resources>
