--- a/app/src/main/res/layout/fragment_dice_roller.xml
+++ b/app/src/main/res/layout/fragment_dice_roller.xml
@@ -7,115 +7,163 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:id="@+id/TextLayout1"
-        android:layout_width="411dp"
-        android:layout_height="57dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-1dp">
+        android:id="@+id/linearLayout"
+        android:layout_width="409dp"
+        android:layout_height="228dp"
+        android:orientation="vertical"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        app:layout_constraintBottom_toTopOf="@id/ButtonLayout1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/NumDiceEdit"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="Number Of Dice"
-            android:inputType="number" />
+            android:hint="Number of dice..."
+            android:inputType="number"
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/ModifierEdit"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="Modifier"
-            android:inputType="number" />
+            android:hint="Modifier..."
+            android:inputType="number"
+            android:textAlignment="textStart"
+            android:textSize="24sp" />
+
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ButtonLayout1"
-        android:layout_width="413dp"
-        android:layout_height="125dp"
+        android:layout_width="406dp"
+        android:layout_height="136dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/TextLayout1"
-        tools:layout_constraintTop_toBottomOf="@id/TextLayout1"
-        tools:layout_editor_absoluteX="1dp">
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        app:layout_constraintBottom_toTopOf="@id/ButtonLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout"
+        tools:layout_constraintTop_toBottomOf="@id/TextLayout1">
 
-        <Button
+        <ImageButton
             android:id="@+id/D4button"
-            android:layout_width="wrap_content"
-            android:layout_height="125dp"
-            android:layout_weight="1"
-            android:text="4" />
-
-        <Button
-            android:id="@+id/D6button"
-            android:layout_width="wrap_content"
-            android:layout_height="125dp"
-            android:layout_weight="1"
-            android:text="6" />
-
-        <Button
-            android:id="@+id/D8button"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="8" />
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/d4"
+            app:tint="@color/blue" />
+
+        <ImageButton
+            android:id="@+id/D6button"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/d6"
+            app:tint="@color/blue" />
+
+        <ImageButton
+            android:id="@+id/D8button"
+            android:layout_width="90dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/d8"
+            app:tint="@color/blue" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ButtonLayout2"
-        android:layout_width="409dp"
-        android:layout_height="134dp"
+        android:layout_width="410dp"
+        android:layout_height="125dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/ButtonLayout1"
-        tools:layout_constraintTop_toBottomOf="@id/ButtonLayout1"
-        tools:layout_editor_absoluteX="1dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ButtonLayout1"
+        tools:layout_constraintTop_toBottomOf="@id/ButtonLayout1">
 
-        <Button
+        <ImageButton
             android:id="@+id/D10button"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="10" />
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/d10"
+            app:tint="@color/blue" />
 
-        <Button
+        <ImageButton
             android:id="@+id/D12button"
-            android:layout_width="wrap_content"
-            android:layout_height="134dp"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="12" />
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/d12"
+            app:tint="@color/blue" />
 
-        <Button
+        <ImageButton
             android:id="@+id/D20button"
-            android:layout_width="wrap_content"
-            android:layout_height="134dp"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="20" />
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/d20"
+            app:tint="@color/blue" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/TextLayout2"
-        android:layout_width="409dp"
-        android:layout_height="127dp"
+        android:layout_width="407dp"
+        android:layout_height="217dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="1dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ButtonLayout2">
 
         <TextView
-            android:id="@+id/EquationView"
+            android:id="@+id/ResultText"
             android:layout_width="match_parent"
-            android:layout_height="62dp"
-            android:text="Equation"
-            android:textAlignment="center" />
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-black"
+            android:text="Result"
+            android:textAlignment="center"
+            android:textSize="34sp" />
 
         <TextView
             android:id="@+id/ResultView"
             android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:text="Result"
-            android:textAlignment="center" />
+            android:layout_height="72dp"
+            android:fontFamily="casual"
+            android:text="0"
+            android:textAlignment="center"
+            android:textSize="60sp"
+            tools:text="10" />
+
+        <TextView
+            android:id="@+id/EquationView"
+            android:layout_width="match_parent"
+            android:layout_height="91dp"
+            android:paddingTop="15dp"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            tools:text="Equation:" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
