--- a/app/src/main/res/layout/fragment_weapon_info.xml
+++ b/app/src/main/res/layout/fragment_weapon_info.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<!--Linear layout orientation vertical-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="NewCharacter.WeaponInfoFragment">
+    android:orientation="vertical"
+    tools:context=".CharacterSheetFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Weapon Info Fragment"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+    <!--Linear layout orientation vertical-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/addAbilityBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:insetLeft="30dp"
+            android:insetTop="20dp"
+            android:insetRight="30dp"
+            android:text="Add Weapon" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerviewWeapon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/weapon_list" />
+
+    </LinearLayout>
+
+</LinearLayout>
